@@ -1,3 +1,6 @@
+2014-02-10 Alexander Malysh <amalysh at kannel.org>
+    * gw/meta_data.[ch]: added meta_data_merge function.
+
 2014-01-31 Alexander Malysh <amalysh at kannel.org>
     * socket.[ch]: renamed interface_name to source_addr to avoid confusion.
 
